@@ -2363,6 +2363,8 @@ audiocodec pcm
   format 0x74776f73  ; "sowt" (MOV files)
   format 0x32336c66  ; "fl32" (MOV files)
   format 0x454e4f4e  ; "NONE" (MOV files from Kodak CX6320)
+  format 0x34326e69  ; "in24" (MOV files)
+  format 0x32336e69  ; "in32" (MOV files)
 ;;;; these are for hardware support only:  (alaw,ulaw,ima-adpcm,mpeg,ac3)
 ;  format 0x6
 ;  format 0x7
